WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
235883
REGRESSION(
r288644
): [GTK4] Criticals when using pinch zoom
https://bugs.webkit.org/show_bug.cgi?id=235883
Summary
REGRESSION(r288644): [GTK4] Criticals when using pinch zoom
Alice Mikhaylenko
Reported
2022-01-31 03:09:09 PST
See the patch.
Attachments
Patch
(1.61 KB, patch)
2022-01-31 03:11 PST
,
Alice Mikhaylenko
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alice Mikhaylenko
Comment 1
2022-01-31 03:11:05 PST
Created
attachment 450393
[details]
Patch
EWS Watchlist
Comment 2
2022-01-31 03:12:59 PST
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
https://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
EWS
Comment 3
2022-01-31 04:14:21 PST
Committed
r288809
(
246585@main
): <
https://commits.webkit.org/246585@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 450393
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug