REGRESSION(r288644): [GTK4] Criticals when using pinch zoom https://bugs.webkit.org/show_bug.cgi?id=235883

Reviewed by Carlos Garcia Campos.

* UIProcess/API/gtk/WebKitWebViewBase.cpp:
(webkitWebViewBaseZoomBegin):
Only cancel the click gesture on GTK3. We don't use g_object_set_data() on GTK4.



Canonical link: https://commits.webkit.org/246585@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288809 268f45cc-cd09-0410-ab3c-d52691b4dbfc