Source/WebKit/UIProcess/API/gtk/WebKitWebViewBase.cpp
@@ -1884,8 +1884,10 @@ static void webkitWebViewBaseZoomBegin(WebKitWebViewBase* webViewBase, GdkEventS
 
     webkitWebViewBaseSynthesizeWheelEvent(webViewBase, event, 0, 0, x, y, WheelEventPhase::Began, WheelEventPhase::NoPhase, true);
 
+#if !USE(GTK4)
     GtkGesture* click = GTK_GESTURE(g_object_get_data(G_OBJECT(webViewBase), "wk-view-multi-press-gesture"));
     gtk_gesture_set_state(click, GTK_EVENT_SEQUENCE_DENIED);
+#endif
 }
 
 static void webkitWebViewBaseZoomChanged(WebKitWebViewBase* webViewBase, gdouble scale, GtkGesture* gesture)
